# Snuk

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FUTURE.md  LICENSE  Makefile.linux.mak  Makefile.windows.mak  README.md  SECURITY.md  test.c  todo.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  release.yml
docs/: CMakeLists.txt  Doxyfile.in  snuk_language.snuk
engine/: CMakeLists.txt  Makefile.linux.mak  Makefile.windows.mak
engine/src/: CMakeLists.txt  application_types.h  defines.h  entry.h
engine/src/core/: CMakeLists.txt  assertions.h  engine.c  engine.h  event.c  event.h  logger.c  logger.h  memory.c  memory.h  sstring.c  sstring.h
engine/src/core/memory/: CMakeLists.txt  arenaalloc.c  arenaalloc.h  memory.c  memory.h
engine/src/core/sync/: CMakeLists.txt
engine/src/core/sync/mutex/: CMakeLists.txt  mutex.c  mutex.h
engine/src/ds/: CMakeLists.txt  darray.c  darray.h
engine/src/input/: CMakeLists.txt  input.c  input.h
engine/src/input/keyboard/: CMakeLists.txt  keyboard.c  keyboard.h  keycode.h  scancode.h
engine/src/input/mouse/: CMakeLists.txt  mouse.h
engine/src/platform/: CMakeLists.txt  atomic.h  log.h  memory.h  sthreads.c  sthreads.h  threads.h  window.h
engine/src/platform/arch/x86_64/: CMakeLists.txt  atomic.c
engine/src/platform/linux/: io.c  log.c  memory.c
engine/src/platform/os/: CMakeLists.txt
engine/src/platform/os/linux/: log.c  memory.c
engine/src/platform/os/windows/: CMakeLists.txt  log.c  memory.c
engine/src/platform/threads/: CMakeLists.txt
engine/src/platform/threads/pthread/: CMakeLists.txt  sthreads.c  threads.c
engine/src/platform/threads/win32/: CMakeLists.txt  sthreads.c
engine/src/platform/windowing/: CMakeLists.txt  linux_input_helper.c  linux_input_helper.h
engine/src/platform/windowing/wayland/: CMakeLists.txt  input_helper.c  input_helper.h  window.c
engine/src/platform/windowing/wayland/protocols/: CMakeLists.txt
engine/src/platform/windowing/wayland/protocols/stable/: CMakeLists.txt
engine/src/platform/windowing/wayland/protocols/stable/xdg-shell/: CMakeLists.txt
engine/src/platform/windowing/wayland/protocols/unstable/: CMakeLists.txt
engine/src/platform/windowing/wayland/protocols/unstable/xdg-decoration/: CMakeLists.txt
engine/src/platform/windowing/win32/: input_helper.c  input_helper.h  window.c
engine/src/platform/windowing/x11/: CMakeLists.txt  input_helper.c  input_helper.h
engine/src/platform/windowing/x11/xcb/: CMakeLists.txt  window.c
engine/src/platform/windowing/x11/xlib/: CMakeLists.txt  input_helper.c  input_helper.h  window.c
engine/src/platform/windows/: log.c  memory.c
include/snuk/: api.h  darray.h  defines.h  io.h  lexer.h  logger.h  memory.h  platform.h
include/snuk/interpreter/: interpreter.h  interpreter_helper.h  native.h  snuk_env.h  snuk_scope.h  snuk_signal.h  snuk_value.h
include/snuk/interpreter/builtins/: builtin_bool.h  builtin_float.h  builtin_int.h  builtin_null.h  builtin_str.h  builtins_common.h  snuk_builtins.h
include/snuk/parser/: parser.h  parser_common.h  snuk_expr.h  snuk_item.h  snuk_type.h  snuk_var.h
repl/: CMakeLists.txt  main.c  runtime.c  runtime.h
src/: CMakeLists.txt  atomic.h  darray.c  darray.h  defines.h  interpreter.c  interpreter.h  io.c  io.h  lexer.c  lexer.h  logger.c  logger.h  main.c  memory.c  memory.h  parser.c  parser.h  parser_helper.h  refcount.h  runtime.c  runtime.h  snuk_string.h  spinlock.h  string.h  string_view.h  utils.h
src/amd64/: CMakeLists.txt  atomic.asm  atomic.c  atomic.h  utils.asm
src/interpreter/: CMakeLists.txt  interpreter.c  interpreter.h  native.c  snuk_env.h  snuk_scope.h  snuk_signal.h  snuk_value.c  snuk_value.h
src/interpreter/builtins/: CMakeLists.txt  builtin_bool.c  builtin_bool.h  builtin_common.c  builtin_common.h  builtin_float.c  builtin_float.h  builtin_int.c  builtin_int.h  builtin_null.c  builtin_null.h  builtin_str.c  builtin_str.h  builtins_common.h  snuk_builtins.h
src/parser/: CMakeLists.txt  parser.c  parser.h  parser_common.h  snuk_expr.c  snuk_expr.h  snuk_item.c  snuk_item.h  snuk_param.c  snuk_param.h  snuk_type.c  snuk_type.h  snuk_var.c  snuk_var.h
testapp/: CMakeLists.txt  Makefile.linux.mak  Makefile.windows.mak
testapp/src/: CMakeLists.txt  app.c
tests/: CMakeLists.txt  Makefile.linux.mak  Makefile.windows.mak  block.snuk  builtins.snuk  comments.snuk  compound_assign.snuk  conditional.snuk  count_ref_counters.sh  exprs.snuk  extend.snuk  factorial.snuk  fn.snuk  fn2.snuk  interface.snuk  list_literal.snuk  loops.snuk  member_access.snuk  numbers.snuk  string_concat.c  string_concat.snuk  type.snuk  types.snuk
tests/src/: CMakeLists.txt  main.c  test_manager.c  test_manager.h
tests/src/tests/: CMakeLists.txt  atomic.c  atomic.h  darray.c  darray.h  log.c  log.h  memory.c  memory.h  sstring.c  sstring.h
tests/unit/: CMakeLists.txt  snuk_string.c  string_view.c  test_framework.h
